clang/test/BSC/Negative/Ownership/RuleCheck/endscope-and-block/endscope-and-block.cbs
// RUN: %clang_cc1 -verify %s

void func1() {
    int num = 1;
    int * _Owned a;
    a = __take_from_raw(&num);
} // expected-error {{memory leak of value: `a`}}

void func2(int * _Owned a) {
    {
        int * p = __move_to_raw(a);
    }
}

void func3(int * _Owned a) {
    {
        int * p = __move_to_raw(a);
    }
    {
        int * _Owned q = a; // expected-error {{use of moved value: `a`}}
    } // expected-error {{memory leak of value: `q`}}
}

void func4(int * _Owned a) {
    {
        int * p = __move_to_raw(a);
        {
            int * _Owned q = __take_from_raw(p);
        } // expected-error {{memory leak of value: `q`}}
    }
}

void func5(int * _Owned a) {
    {
        int *p = __move_to_raw(a);
        {
            int * _Owned q = __take_from_raw(p);
            {}
        } // expected-error {{memory leak of value: `q`}}
    }
}